# MNIST_Neural_Network

./: CMakeLists.txt  main.cpp
Tests/: neuralNetTest.cpp
src/: Data.cpp  Data.h  DataLoader.cpp  DataLoader.h  Net.cpp  Net.h
